--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,17 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": "stylelint-config-standard",
+  "rules": {
+    "at-rule-no-unknown": [ true, {
+      "ignoreAtRules": [
+        "if",
+        "include",
+        "else",
+        "mixin",
+        "warn"
+      ]
+    }],
+    "indentation": "tab",
+    "number-leading-zero": null,
+    "unit-whitelist": ["px", "em", "%"]
+  }
 }
