--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     ],
     "moduleNameMapper": {
       "\\.(css|scss)$": "<rootDir>/src/__mocks__/style-mock.js"
-    },
-    "testURL": "http://localhost"
+    }
   },
   "devDependencies": {
     "babel": "6.3.26",
@@ -81,7 +80,7 @@
     "react-dom": "16.8.6",
     "react-immutable-proptypes": "2.1.0",
     "react-redux": "5.0.5",
-    "react-responsive-carousel": "^3.1.49",
+    "react-responsive-carousel": "3.1.49",
     "react-router": "3.2.0",
     "react-router-redux": "4.0.8",
     "react-scripts": "3.0.1",
